--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="aleksandar.tendjer.chatapplication.MessageActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="10">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5">
+
+        <TextView
+            android:id="@+id/contactName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:text="Contact"
+            android:textAlignment="center"
+            android:textSize="25dp" />
         <Button
             android:id="@+id/LogoutBtnMsg"
             android:layout_width="wrap_content"
@@ -15,7 +31,26 @@
             android:layout_marginEnd="20dp"
             android:layout_alignParentTop="true"
             android:text="@string/logoutString" />
+    </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:orientation="vertical">
+        <ListView
+            android:id="@+id/messageListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+        </ListView>
+
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5">
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,5 +71,10 @@
             android:layout_marginBottom="20dp"
             android:layout_alignParentBottom="true"
             android:text="@string/SendBtnTxt" />
+
+
     </RelativeLayout>
+
+
+</LinearLayout>
 
