--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -48,7 +48,7 @@
 
 
             <EditText
-                android:id="@+id/editText3"
+                android:id="@+id/EditLast"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/PasswordRegister"
